[tool.poetry]
name = "project-mini-webdevelop"
version = "1.0.0"
description = ""
authors = ["mirzali"]
readme = "README.md"
packages = [{include = "project_mini"}]

[tool.poetry.dependencies]
python = "3.12.*"
fastapi="0.115.0"
SQLAlchemy="2.0.35"
uvicorn="0.31.0"
psycopg2="2.9.9"
python-decouple="3.8"
bcrypt="4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
